Added needed dependencies

--- a/ds-rca.csproj
+++ b/ds-rca.csproj
@@ -9,4 +9,11 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
+      <PackageReference Include="NetCord" Version="1.0.0-alpha.365" />
+      <PackageReference Include="NetCord.Services" Version="1.0.0-alpha.365" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
