Implemented contract service and db

--- a/ds-rca.csproj
+++ b/ds-rca.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <Folder Include="bot\modules\"/>
+        <Folder Include="data\db\" />
     </ItemGroup>
 
 </Project>
